--- a/src/SyncMe/SyncMe/SyncMe/AppShell.xaml
+++ b/src/SyncMe/SyncMe/SyncMe/AppShell.xaml
@@ -12,5 +12,8 @@
         <ShellContent Title="About"
                       Icon="icon_about.png"
                       ContentTemplate="{local:DIDataTemplate Type={x:Type views:AboutPage}}" />
+        <ShellContent Title="Calendar"
+                      Icon="icon_about.png"
+                      ContentTemplate="{local:DIDataTemplate Type={x:Type views:CalendarPage}}" />
     </TabBar>
 </Shell>
