#added create event page

--- a/src/SyncMe/SyncMe/SyncMe/AppShell.xaml
+++ b/src/SyncMe/SyncMe/SyncMe/AppShell.xaml
@@ -15,5 +15,7 @@
         <ShellContent Title="Calendar"
                       Icon="icon_about.png"
                       ContentTemplate="{local:DIDataTemplate Type={x:Type views:CalendarPage}}" />
+        <ShellContent Title="Create New Event"
+                      ContentTemplate="{local:DIDataTemplate Type={x:Type views:CreateEvent}}" />
     </TabBar>
 </Shell>
