#added event schedule

--- a/src/SyncMe/SyncMe/SyncMe/AppShell.xaml
+++ b/src/SyncMe/SyncMe/SyncMe/AppShell.xaml
@@ -8,12 +8,15 @@
     <TabBar>
         <ShellContent Title="Notes"
                       Icon="icon_feed.png"
-                      ContentTemplate="{local:DIDataTemplate Type={x:Type views:NotesPage}}" />
+                      ContentTemplate="{local:DIDataTemplate Type={x:Type views:NotesPage}}"
+                      Route="notes"/>
         <ShellContent Title="Calendar"
                       Icon="icon_open_calendar.png"
-                      ContentTemplate="{local:DIDataTemplate Type={x:Type views:CalendarPage}}" />
+                      ContentTemplate="{local:DIDataTemplate Type={x:Type views:CalendarPage}}"
+                      Route="calendar"/>
         <ShellContent Title="New Event"
                       Icon="icon_create_event.png"
-                      ContentTemplate="{local:DIDataTemplate Type={x:Type views:CreateEvent}}" />
+                      ContentTemplate="{local:DIDataTemplate Type={x:Type views:CreateEvent}}"
+                      Route="newEvent"/>
     </TabBar>
 </Shell>
