--- a/src/SyncMe/SyncMe/SyncMe/App.xaml
+++ b/src/SyncMe/SyncMe/SyncMe/App.xaml
@@ -2,6 +2,10 @@
 <Application xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="SyncMe.App">
-
-
+    <Application.Resources>
+        <ResourceDictionary>
+            <Color x:Key="epamBlue">#39c2d7</Color>
+            <Color x:Key="epamGrey">#464547</Color>
+        </ResourceDictionary>
+    </Application.Resources>
 </Application>
