--- a/src/SyncMe/SyncMe/SyncMe/Views/CalendarPage.xaml
+++ b/src/SyncMe/SyncMe/SyncMe/Views/CalendarPage.xaml
@@ -3,14 +3,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="SyncMe.Views.CalendarPage"
              xmlns:controls="clr-namespace:Xamarin.Plugin.Calendar.Controls;assembly=Xamarin.Plugin.Calendar" 
-             xmlns:local1="clr-namespace:SyncMe.ViewModels"
              Title="Calendar"
              >
-    
-    <ContentPage.BindingContext>
-        <local1:CalendarPageViewModel/>
-    </ContentPage.BindingContext>
-    
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="7*" />
@@ -24,11 +18,16 @@
         <Label Grid.Row="0" FontAttributes="Bold" Grid.Column="0" FontSize="20" Text="Notifications:" Margin="20"></Label>
         <Switch Grid.Row="0" Grid.Column="1" IsToggled="True" Margin="20" x:Name="NotificationsSwitcher"></Switch>
         <controls:Calendar 
+            x:Name="Calendar1"
             Grid.Row="1"  
             Grid.Column="0" 
             Grid.ColumnSpan="2"
-            Events="{Binding Events}">
+            Events="{Binding Events}"
+            DayTappedCommand="{Binding DayTappedCommand}"
+            >
         </controls:Calendar>
+
+
         <Button 
             x:Name="AddEvent"
             Grid.Row="2"  
