add sync buttons

--- a/src/SyncMe/SyncMe/SyncMe/App.xaml
+++ b/src/SyncMe/SyncMe/SyncMe/App.xaml
@@ -7,5 +7,14 @@
             <Color x:Key="epamBlue">#39c2d7</Color>
             <Color x:Key="epamGrey">#464547</Color>
         </ResourceDictionary>
+    <Style x:Key="RoundButtonStyle" TargetType="Button">
+        <Setter Property="CornerRadius" Value="100"/>
+        <Setter Property="HeightRequest" Value="55"/>
+        <Setter Property="WidthRequest" Value="55"/>
+        <Setter Property="HorizontalOptions" Value="CenterAndExpand"/>
+        <Setter Property="VerticalOptions" Value="CenterAndExpand"/>
+        <Setter Property="Padding" Value="15"/>
+        <Setter Property="Margin" Value="0,0,20,20"/>
+    </Style>
     </Application.Resources>
 </Application>
