--- a/src/SyncMe/SyncMe/SyncMe/Views/IdentityProvidersPage.xaml
+++ b/src/SyncMe/SyncMe/SyncMe/Views/IdentityProvidersPage.xaml
@@ -14,17 +14,14 @@
                 <Setter Property="TextColor" Value="{StaticResource epamGrey}"/>
                 <Setter Property="VerticalTextAlignment" Value="Center"/>
                 <Setter Property="VerticalOptions" Value="Center"/>
-                <Setter Property="Margin" Value="20,0,0,0" />
+                <Setter Property="Margin" Value="20,7,0,0" />
                 <Setter Property="Padding" Value="5"/>
             </Style>
-            <Style x:Key="FloadButtonStyle" TargetType="Button">
+            <Style x:Key="SyncButton" TargetType="Button">
                 <Setter Property="CornerRadius" Value="100"/>
-                <Setter Property="HeightRequest" Value="55"/>
-                <Setter Property="WidthRequest" Value="55"/>
-                <Setter Property="HorizontalOptions" Value="CenterAndExpand"/>
-                <Setter Property="VerticalOptions" Value="CenterAndExpand"/>
-                <Setter Property="Padding" Value="15"/>
-                <Setter Property="Margin" Value="0,0,20,20"/>
+                <Setter Property="HeightRequest" Value="20"/>
+                <Setter Property="WidthRequest" Value="20"/>
+                <Setter Property="Margin" Value="0,12,20,0" />
             </Style>
         </ResourceDictionary>
     </ContentPage.Resources>
@@ -32,37 +29,47 @@
     <ContentPage.Content>
         <AbsoluteLayout VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand">
             <StackLayout>
-                <Label Text="Identities" Style="{StaticResource TitleStyle}" />
-                <ListView ItemsSource="{Binding Identities}">
-                    <ListView.ItemTemplate>
-                        <DataTemplate>
-                            <ViewCell>
-                                <StackLayout>
-                                    <Label Text="{Binding Name}" Style="{StaticResource IdentityStyle}"/>
-                                </StackLayout>
-                            </ViewCell>
-                        </DataTemplate>
-                    </ListView.ItemTemplate>
-                </ListView>
+                <FlexLayout Direction="Column">
+                    <StackLayout>
+                        <FlexLayout JustifyContent="SpaceBetween">
+                            <Label Text="Identities" Style="{StaticResource TitleStyle}" />
+                            <Button Clicked="OnSyncClicked" CommandParameter="{Binding .}" Style="{StaticResource SyncButton}" />
+                        </FlexLayout>
+                    </StackLayout>
+                    <ListView ItemsSource="{Binding Identities}">
+                        <ListView.ItemTemplate>
+                            <DataTemplate>
+                                <ViewCell>
+                                    <StackLayout>
+                                        <FlexLayout JustifyContent="SpaceBetween">
+                                            <Label Text="{Binding Name}" Style="{StaticResource IdentityStyle}"/>
+                                            <Button Clicked="OnSyncClicked" CommandParameter="{Binding .}" Style="{StaticResource SyncButton}" />
+                                        </FlexLayout>
+                                    </StackLayout>
+                                </ViewCell>
+                            </DataTemplate>
+                        </ListView.ItemTemplate>
+                    </ListView>
+                </FlexLayout>
             </StackLayout>
-                <Button x:Name="AddIdentity"
+            <Button x:Name="AddIdentity"
                         ImageSource="icon_plus.xml"
                         AbsoluteLayout.LayoutFlags="PositionProportional"
                         AbsoluteLayout.LayoutBounds="1, 1, AutoSize, AutoSize"
-                        Style="{StaticResource FloadButtonStyle}"/>
-                <Button x:Name="AddOutlook"
+                        Style="{StaticResource RoundButtonStyle}"/>
+            <Button x:Name="AddOutlook"
                         ImageSource="icon_outlook.xml"
                         IsVisible="False"
                         AbsoluteLayout.LayoutFlags="PositionProportional"
                         AbsoluteLayout.LayoutBounds="1, 0.85, AutoSize, AutoSize"
-                        Style="{StaticResource FloadButtonStyle}"/>
-                <Button x:Name="AddGoogle"
+                        Style="{StaticResource RoundButtonStyle}"/>
+            <Button x:Name="AddGoogle"
                         ImageSource="icon_google.xml"
                         IsVisible="False"
                         IsEnabled="False"
                         AbsoluteLayout.LayoutFlags="PositionProportional"
                         AbsoluteLayout.LayoutBounds="1, 0.70, AutoSize, AutoSize"
-                        Style="{StaticResource FloadButtonStyle}"/>
+                        Style="{StaticResource RoundButtonStyle}"/>
         </AbsoluteLayout>
     </ContentPage.Content>
 </ContentPage>
