--- a/src/SyncMe/SyncMe/SyncMe/Views/CreateEventPage.xaml
+++ b/src/SyncMe/SyncMe/SyncMe/Views/CreateEventPage.xaml
@@ -4,7 +4,7 @@
              xmlns:forms="clr-namespace:dotMorten.Xamarin.Forms;assembly=dotMorten.Xamarin.Forms.AutoSuggestBox"
              x:Class="SyncMe.Views.CreateEventPage">
     <ContentPage.ToolbarItems>
-        <ToolbarItem x:Name="AddEvent" Text="Add event" IsEnabled="{Binding IsAddEvenEnabled}"></ToolbarItem>
+        <ToolbarItem x:Name="AddEvent" Text="Add event"></ToolbarItem>
         <ToolbarItem Text="Cancel" Clicked="CancelEvent"></ToolbarItem>
     </ContentPage.ToolbarItems>
     <ContentPage.Content>
@@ -16,24 +16,24 @@
                 </StackLayout>
                 <StackLayout Padding="0, 10">
                     <Grid>
-                        <Label Text="All-Day"></Label>
+                        <Label Text="All-Day" TextColor="{StaticResource epamGrey}"></Label>
                         <Switch IsToggled="False" OnColor="#4AD764" ThumbColor="#FFFFFF" Toggled="OnSwitchToggled"></Switch>
                     </Grid>
-                    <Button Text="{Binding ScheduleButtonText}" Clicked="OnConfigureScheduleClicked"></Button>
+                    <Button Text="{Binding ScheduleButtonText}" Clicked="OnConfigureScheduleClicked" BackgroundColor="{StaticResource epamBlue}"></Button>
                     <StackLayout>
-                        <Label Text="Starts date" VerticalTextAlignment="Center"></Label>
-                        <DatePicker Date="{Binding StartDate}"></DatePicker>
+                        <Label Text="Starts date" VerticalTextAlignment="Center" TextColor="{StaticResource epamGrey}"></Label>
+                        <DatePicker Date="{Binding StartDate}" MinimumDate="2000/12/1" MaximumDate="2100/12/31"></DatePicker>
                         <TimePicker Time="{Binding StartTime}"></TimePicker>
                     </StackLayout>
                     <StackLayout>
-                        <Label Text="Ends date" VerticalTextAlignment="Center"></Label>
-                        <DatePicker Date="{Binding EndDate}"></DatePicker>
+                        <Label Text="Ends date" VerticalTextAlignment="Center" TextColor="{StaticResource epamGrey}"></Label>
+                        <DatePicker Date="{Binding EndDate}" MinimumDate="2000/12/1" MaximumDate="2100/12/31"></DatePicker>
                         <TimePicker Time="{Binding EndTime}"></TimePicker>
                     </StackLayout>
                 </StackLayout>
                 <StackLayout Padding="0, 10">
-                    <Label Text="Alert"></Label>
-                    <Button Text="{Binding AlertButtonText}" Clicked="OnAlertButtonClicked"></Button>
+                    <Label Text="Alert" TextColor="{StaticResource epamGrey}"></Label>
+                    <Button Text="{Binding AlertButtonText}" Clicked="OnAlertButtonClicked" BackgroundColor="{StaticResource epamBlue}"></Button>
                 </StackLayout>
             </StackLayout>
         </ScrollView>
