Namespace header moved to title

--- a/src/SyncMe/SyncMe/SyncMe/Views/NamespaceManagmentPage.xaml
+++ b/src/SyncMe/SyncMe/SyncMe/Views/NamespaceManagmentPage.xaml
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="SyncMe.Views.NamespaceManagmentPage">
+             x:Class="SyncMe.Views.NamespaceManagmentPage"
+             Title="Namespaces">
     <ContentPage.Resources>
         <ResourceDictionary>
             <Style x:Key="TitleStyle" TargetType="Label">
@@ -45,9 +46,6 @@
     <ContentPage.Content>
         <StackLayout>
 
-            <Frame BorderColor="{StaticResource epamBlue}" Padding="5">
-                <Label Text="Active namespaces" Style="{StaticResource TitleStyle}" />
-            </Frame>
             <ListView 
                 x:Name="activeNamespaces" 
                 ItemsSource="{Binding Namespaces}"
