--- a/src/SyncMe/SyncMe/SyncMe/Views/EventAlertPage.xaml
+++ b/src/SyncMe/SyncMe/SyncMe/Views/EventAlertPage.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:SyncMe.Controls"
              x:Class="SyncMe.Views.EventAlertPage"
-             Title="Event Alarm">
+             Title="Event Alert">
     <ContentPage.Content>
         <StackLayout>
             <local:TagButton Text="At time of event" Clicked="OnClicked" Tag="AtEventTime"/>
